Atualiza comentários e formatação no arquivo application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 spring.application.name=testenormal
 server.port=8080
 
-# --- O CENÁRIO DO CRIME ---
+# # --- O CENÁRIO DO CRIME ---
 
-# Limite RÍGIDO de 200 threads (Padrão Tomcat, mas forçando aqui pra garantir)
-server.tomcat.threads.max=200
+# # Limite RÍGIDO de 200 threads (Padrão Tomcat, mas forçando aqui pra garantir)
+# server.tomcat.threads.max=200
 
-# Mínimo de threads para garantir que ele já suba com algumas (opcional)
-server.tomcat.threads.min-spare=10
+# # Mínimo de threads para garantir que ele já suba com algumas (opcional)
+# server.tomcat.threads.min-spare=10
 
-# O Backlog (Fila de espera do Socket do SO)
-# Se as 200 threads estiverem ocupadas, o SO enfileira mais 10 conexões.
-# A 211ª conexão será REJEITADA IMEDIATAMENTE (Connection Refused).
-server.tomcat.accept-count=10
+# # O Backlog (Fila de espera do Socket do SO)
+# # Se as 200 threads estiverem ocupadas, o SO enfileira mais 10 conexões.
+# # A 211ª conexão será REJEITADA IMEDIATAMENTE (Connection Refused).
+# server.tomcat.accept-count=10
+
+# --- O CENÁRIO DA REDENÇÃO ---
+
+# 1. Ativa as Virtual Threads em todo o Spring Boot (Tomcat, TaskExecutor, etc)
+spring.threads.virtual.enabled=true
